--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title></title>
-	
+	<title>Geo</title>
+	<script src="geo.js"></script>
+	<link rel="stylesheet" href="style.css" />
 	<!--[if lt IE 9]>
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
