--- a/views/home.erb
+++ b/views/home.erb
@@ -1,1 +1,3 @@
 	<h1>Hi there!</h1>
+	
+	<p><a href="/auth/login">Log In</a> | <a href="/protected">Protected Page</a> | <a href="/auth/logout">Log Out</a></p>
