--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Geo</title>
-	<script src="geo.js"></script>
-	<link rel="stylesheet" href="style.css" />
+	<script src="/geo.js"></script>
+	<link rel="stylesheet" href="/style.css" />
 	<!--[if lt IE 9]>
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
