--- a/views/layout.erb
+++ b/views/layout.erb
@@ -22,7 +22,9 @@
 		<%= flash[:error] %>
 	</div>
 	<% end %>
-
+	
+	<p><a href="/auth/login">Log In</a> | <a href="/protected">Protected Page</a> | <a href="/auth/logout">Log Out</a> | <a href="/register">Register a new account</a></p>
+	
 	<%= yield %>
 	
 </body>
