Add a list of mammocci to the protected area
The protected are now lists all the mammoccios. This is preliminary to the "friend" feature that will be rolled out soon.

Signed-off-by: Emanuele <feliziani.emanuele@gmail.com>

--- a/views/protected.erb
+++ b/views/protected.erb
@@ -1,3 +1,8 @@
-	<%= @user.inspect %>
 	<button id="sendLocation">Geolocate Me!</button>
 	<div id="response"></div>
+	<h2>Find your friends</h2>
+	<ul class="all_users">
+		<% Mammoccio.each do |mammoccio| %>
+			<li><%= mammoccio.email %></li>
+		<% end %>
+	</ul>
